Market selector fixed and navigation mobile fix

--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/megamenusolution/_megaMenuSolution.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/megamenusolution/_megaMenuSolution.scss
@@ -386,6 +386,7 @@
     color: $color-jordy-blue;
 }
 .pw-megamenu .col-side-links .icon-Circle_Arrow_Right_pw {
+    display: none;
     margin-left: $margin-sm;
     vertical-align: middle;
     @media #{$desktop} {
